updated links in thumbnails

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <ul>
         <li><a href="https://vacationrentalsatl.family.blog/" target="_blank">Blog</a></li>
-        <li><a href="https://theodoredjordan.github.io/collegianschoice/" target="_blank">Other Properties</a></li>
+        <li><a href="https://theodoredjordan.github.io/300Peachtree/" target="_blank">Other Properties</a></li>
         <li><a href="https://darksky.net/forecast/33.7482,-84.3909/us12/en" target="_blank">Weather</a></li>
         <li><a href="https://discoveratlanta.com/events/main/" target="_blank">Discover Atlanta</a></li>
        </ul>
@@ -48,15 +48,15 @@
             <h3>1st Floor Apartment with washer/dryer</h3>
             
             <div class="thumbnails">
-	                  <img onmouseover="preview102.src=img11.src" name="img11" src="/media/102/kitchen-102-1.jpg" alt="" />
-	                  <img onmouseover="preview102.src=img21.src" name="img21" src="/media/102/br1-1.jpg" alt="" />
-	                  <img onmouseover="preview102.src=img31.src" name="img31" src="/media/102/br2.jpg" alt="" />
-	                  <img onmouseover="preview102.src=img41.src" name="img41" src="/media/102/br3.jpg" alt="" />
-	                  <img onmouseover="preview102.src=img51.src" name="img51" src="/media/102/br4.jpg" alt="" />
-	                  <img onmouseover="preview102.src=img61.src" name="img61" src="/media/102/hallway-102.jpg" alt="" />                                        
+	                  <img onmouseover="preview102.src=img11.src" name="img11" src="media/102/kitchen-102-1.jpg" alt="" />
+	                  <img onmouseover="preview102.src=img21.src" name="img21" src="media/102/br1-1.jpg" alt="" />
+	                  <img onmouseover="preview102.src=img31.src" name="img31" src="media/102/br2.jpg" alt="" />
+	                  <img onmouseover="preview102.src=img41.src" name="img41" src="media/102/br3.jpg" alt="" />
+	                  <img onmouseover="preview102.src=img51.src" name="img51" src="media/102/br4.jpg" alt="" />
+	                  <img onmouseover="preview102.src=img61.src" name="img61" src="media/102/hallway-102.jpg" alt="" />                                        
             </div>
             <div class="preview" align="center">
-	                  <img name="preview102" src="/media/102/102den.jpg" alt=""/>
+	                  <img name="preview102" src="media/102/102den.jpg" alt=""/>
             </div>
 
           </div> <!-- Close the gallery div -->
@@ -68,14 +68,14 @@
          <div class="gallery" align="center">
             <h3>2nd Floor Apartment (Note: Doesn't have a Den)</h3>
             <div class="thumbnails">
-	                  <img onmouseover="preview203.src=img12.src" name="img12" src="/media/203/203br1.jpg" alt="" />
-	                  <img onmouseover="preview203.src=img22.src" name="img22" src="/media/203/203br2.jpg" alt="" />
-	                  <img onmouseover="preview203.src=img32.src" name="img32" src="/media/203/2033rdflbed.jpg" alt="" />
-                    <img onmouseover="preview203.src=img42.src" name="img42" src="/media/203/203kitchen.jpg" alt="" />
-	                  <img onmouseover="preview203.src=img52.src" name="img52" src="/media/203/203bath.jpg" alt="" />
+	                  <img onmouseover="preview203.src=img12.src" name="img12" src="media/203/203br1.jpg" alt="" />
+	                  <img onmouseover="preview203.src=img22.src" name="img22" src="media/203/203br2.jpg" alt="" />
+	                  <img onmouseover="preview203.src=img32.src" name="img32" src="media/203/2033rdflbed.jpg" alt="" />
+                    <img onmouseover="preview203.src=img42.src" name="img42" src="media/203/203kitchen.jpg" alt="" />
+	                  <img onmouseover="preview203.src=img52.src" name="img52" src="media/203/203bath.jpg" alt="" />
             </div>
             <div class="preview" align="center">
-	                  <img name="preview203" src="/media/203/203br1.jpg" alt=""/>
+	                  <img name="preview203" src="media/203/203br1.jpg" alt=""/>
             </div>
 
           </div> <!-- Close the gallery div -->
@@ -96,7 +96,7 @@
                     <img onmouseover="preview201202.src=img83.src" name="img83" src="media/201202/202bath-a.jpg" alt="" />
             </div>
             <div class="preview" align="center">
-	                  <img name="preview201202" src="/media/201202/unit201bed-3.jpg" alt=""/>
+	                  <img name="preview201202" src="media/201202/unit201bed-3.jpg" alt=""/>
             </div>
 
           </div> <!-- Close the gallery div -->
@@ -114,7 +114,7 @@
 	                  <img onmouseover="preview101.src=img54.src" name="img54" src="media/756Building/756-Exterior-Front.jpg" alt="" />
             </div>
             <div class="preview" align="center">
-	                  <img name="preview101" src="/media/756Building/756-Exterior-Front.jpg" alt=""/>
+	                  <img name="preview101" src="media/756Building/756-Exterior-Front.jpg" alt=""/>
             </div>
 
           </div> <!-- Close the gallery div -->
