--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <img onmouseover="preview201202.src=img83.src" name="img83" src="media/201202/202bath-a.jpg" alt="" />
             </div>
             <div class="preview" align="center">
-	                  <img name="preview201202" src="media/201202/unit201bed-3.jpg" alt=""/>
+	                  <img name="preview201202" src="media/201202/unit201bed-3.JPG" alt=""/>
             </div>
 
           </div> <!-- Close the gallery div -->
@@ -108,13 +108,13 @@
          <div class="gallery" align="center">
             <h3>1st Floor Studio Apartment with private bathroom and balcony</h3>
             <div class="thumbnails">
-	                  <img onmouseover="preview101.src=img14.src" name="img14" src="media/756Building/756-sideyard.jpg" alt="" />
-	                  <img onmouseover="preview101.src=img24.src" name="img24" src="media/756Building/parking.jpg" alt="" />
-	                  <img onmouseover="preview101.src=img44.src" name="img44" src="media/756Building/parking2.jpg" alt="" />
-	                  <img onmouseover="preview101.src=img54.src" name="img54" src="media/756Building/756-Exterior-Front.jpg" alt="" />
+	                  <img onmouseover="preview101.src=img14.src" name="img14" src="media/101/101 BR-1c.jpg" alt="" />
+	                  <img onmouseover="preview101.src=img24.src" name="img24" src="media/101/101 Kitch-1.jpg" alt="" />
+	                  <img onmouseover="preview101.src=img44.src" name="img44" src="media/101/unit101bath.jpg" alt="" />
+	                  <img onmouseover="preview101.src=img54.src" name="img54" src="media/101/101 Balcony2.jpg" alt="" />
             </div>
             <div class="preview" align="center">
-	                  <img name="preview101" src="media/756Building/756-Exterior-Front.jpg" alt=""/>
+	                  <img name="preview101" src="media/101/wideview.jpg" alt=""/>
             </div>
 
           </div> <!-- Close the gallery div -->
