--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
      <div class="grid2">
  
        <div class="box header">
-         <h1>Atlanta University Center Apartments</h1>
+         <h1>AUC Apartments</h1>
          <p>Near</p>
-         <h2>Georgia World Congress Center and Mercedes Benz Stadium</h2>
+         <h2>Mercedes-Benz Stadium and Georgia World Congress Center and </h2>
        </div>
 
        <div class="box banner2">      
