update domain space and link to unit 102-vrbo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <ul>
         <li><a href="https://vacationrentalsatl.family.blog/" target="_blank">Blog</a></li>
-        <li><a href="https://theodoredjordan.github.io/300Peachtree/" target="_blank">Other Properties</a></li>
+        <li><a href="https://collegianschoice.github.io/300Peachtree/" target="_blank">Other Properties</a></li>
         <li><a href="https://darksky.net/forecast/33.7482,-84.3909/us12/en" target="_blank">Weather</a></li>
         <li><a href="https://discoveratlanta.com/events/main/" target="_blank">Discover Atlanta</a></li>
        </ul>
@@ -43,7 +43,7 @@
 
        <div class="box photos102">
         <h1>Unit 102: Large 4 Bed - 2 Bath Apartment</h1>   
-        <button class="button"><a href="https://airbnb.com/h/au-unit102" target="_blank">Book Here</a></button>
+        <button class="button"><a href="https://www.vrbo.com/2660114?adultsCount=2&unitId=3230790" target="_blank">Book Here</a></button>
          <div class="gallery" align="center">
             <h3>1st Floor Apartment with washer/dryer</h3>
             
