updated link to 201/202

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
        <div class="box photos201202">
         <h1>Unit 201/202 - 2 Bed 2 bath Apartment</h1>   
-        <button class="button"><a href="https://www.airbnb.com/h/300peachtree" target="_blank">Book Here</a></button>
+        <button class="button"><a href="https://www.vrbo.com/2351478?unitId=2917878" target="_blank">Book Here</a></button>
          <div class="gallery" align="center">
             <h3>Studio apartment combined with 2 Bedroom apartment</h3>
             <div class="thumbnails">
